elab-stlc-unification-recovery/examples/full.stderr
error: mismatched types
  ┌─ <stdin>:1:15
  │
1 │ let x : Int := true;
  │                ^^^^
  = expected: Int
       found: Bool

error: unbound type `Foo`
  ┌─ <stdin>:3:16
  │
3 │ let example-1 : Foo -> Int :=
  │                 ^^^

error: unexpected parameter
  ┌─ <stdin>:4:8
  │
4 │   fun x y => x + z;
  │         ^

error: unbound name `z`
  ┌─ <stdin>:4:17
  │
4 │   fun x y => x + z;
  │                  ^

error: mismatched types
  ┌─ <stdin>:7:11
  │
7 │   fun (x : Bool) y x => x;
  │            ^^^^
  = expected: Bool
       found: Int

error: unexpected parameter
  ┌─ <stdin>:7:17
  │
7 │   fun (x : Bool) y x => x;
  │                  ^

error: unexpected parameter
  ┌─ <stdin>:7:19
  │
7 │   fun (x : Bool) y x => x;
  │                    ^

error: mismatched types
  ┌─ <stdin>:9:4
  │
9 │ x + false
  │     ^^^^^
  = expected: Int
       found: Bool

